# turtlebot-gt-2018

./: .gitignore  README.md  circle_detect.py  example.py
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/image_transport_tutorial/: ResizedImage.h
devel/lib/harris_ball_follower/: ball_follower  ball_follower_debug  circle_test  commander  compress_test  drive_wheels  find_ball  find_ball_node
devel/lib/image_transport_tutorial/: my_publisher  my_subscriber
devel/lib/pkgconfig/: harris_ball_follower.pc  image_transport_tutorial.pc
devel/share/harris_ball_follower/cmake/: harris_ball_followerConfig.cmake
devel/share/image_transport_tutorial/cmake/: image_transport_tutorial-msg-extras.cmake  image_transport_tutorial-msg-paths.cmake  image_transport_tutorialConfig.cmake
devel/share/roseus/ros/image_transport_tutorial/: manifest.l
documentation/: cmake_clion
src/: image_transport_tutorial
src/Harris_Caleb/: ball_follower.py  lab1_steps.txt
src/harris_ball_follower/: CMakeLists.txt  package.xml  todo.txt
src/harris_ball_follower/include/: bot.h
src/harris_ball_follower/launch/: find_ball.launch  find_ball_testing.launch
src/harris_ball_follower/src/: ball_follower.cpp  ball_follower.h  ball_follower_debug.cpp  bot.cpp  commander_node.cpp  drive_wheels.cpp  find_ball.cpp  find_ball.h  find_orange_ball.cpp  find_orange_ball_node.cpp  image_publisher.cpp  pid_plotting.h  pid_turtlebot.h
src/harris_chase_object/: CMakeLists.txt  package.xml
src/harris_chase_object/include/harris_chase_object/: bot.h  object.h
src/harris_chase_object/launch/: find_ball.launch  find_ball_simulation.launch  simulation.launch
src/harris_chase_object/src/fakes/: fake_laser_Scan.cpp
src/harris_chase_object/src/nodes/: commander_node.cpp  detect_ball_node.cpp  drive_wheels_node.cpp  follow_drive_node.cpp
src/harris_chase_object/src/objects/: bot.cpp  find_ball.cpp  object.cpp  pid_turtlebot.cpp
src/harris_navigate_to_goal/: CMakeLists.txt  package.xml
src/harris_navigate_to_goal/include/harris_navigate_to_goal/: objectLocation.h
src/harris_navigate_to_goal/launch/: lab4_sim.launch
src/harris_navigate_to_goal/msg/: DistanceAngle.msg  objectLocation.msg
src/harris_navigate_to_goal/src/nodes/: commander_node.cpp  detect_objects_node.cpp  follow_drive_node.cpp  navigation_node.cpp  scan_cloud_node.cpp  tf_listener_node.cpp  tf_listener_node.h
src/harris_navigate_to_goal/src/objects/: bot.cpp  pid_turtlebot.cpp  pid_turtlebot.h
src/harris_path_planning/: CMakeLists.txt  main.cpp
src/harris_path_planning/maps/: maze_sim1.yaml  mymap.pgm  mymap.yaml
src/harris_path_planning/maps/maps/: maze_sim1.pgm
src/harris_path_planning/params/: globalcostparams.yaml  localcostparams.yaml  plannerparams.yaml
src/harris_sign_classification/: main_CNN_test2.py  rename_files_sequential.py  sign_classifier.py  train_CNN_caleb.py
src/harris_sign_classification/harris_caleb/: README.md  sign_classifier.py
src/harris_sign_classification/harris_caleb/src/: convnet_c4f4.py  simplecnn.py
src/harris_sign_classification/sign_classification/: README.md
src/harris_sign_classification/src/: convnet_c4f4.py
src/lab1/: ball_follower.py  converter.py  lab1_steps.txt
src/lab1/tracker/: centroidtracker.py
src/lab2/: Untitled Document 1  lab2_steps.txt
src/lab3/: ball_follower.cpp  ball_follower_debug.cpp  lab3_steps.txt
src/lab4/include/harris_navigate_to_goal/: DistanceAngle.h
src/lab4/launch/: lab4.launch
src/lab4/src/nodes/: detect_objects_node.cpp  detect_objects_node.h  navigation_node.cpp
src/lab4/src/objects/: object.cpp
src/lab5/: lab5_steps.txt
vision/: circle_detect.py  lab1_test.py  mask_detect.py  red_detect.py  video_test.py
vision/tracker/: centroidtracker.py
